--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://dnjsndnjs.github.io/geon-gang/",
+  "homepage": ".",
   "name": "geon-gang",
   "version": "0.1.0",
   "private": true,
