--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://www.dnjsndnjs.com/",
+  "homepage": "http://www.geon-gang.dnjsndnjs.com/",
   "name": "geon-gang",
   "version": "1.2.1",
   "private": true,
